# eze.works

./: .gitignore  Caddyfile  Cargo.toml  README.md  bacon.toml  mix.exs
assets/css/: base.css  fonts.css  styles.css
assets/js/: highlight.min.js
config/: config.exs
deploy/: deploy.sh  eze_works.service  ezeweb.service  update_deployment.sh
lib/: eze_works.ex
lib/eze_works/: code_reload.ex  page.ex  page_handler.ex  post.ex  router.ex  store.ex  telemetry.ex
posts/: a-different-way-of-working-with-streaming-json.md  a-neovim-directory-browser-from-scratch.md  discovering-nim-nimscript.md  elixir-two-weeks-in.md  http-headers-are-dark-and-full-of-terrors.md  integrating-tuis-into-neovim.md  nix-phd-paper-notes.md  optimizing-html-images-as-a-post-processing-step.md  reflections-on-implementing-telescope-three-times.md  reflections-on-writing-3-parser-combinator-libraries.md  rust-stockholm-syndrome.md  self-describing-command-line-arguments.md  software-as-craft.md  time-for-computers.md  zig-first-impressions.md
priv/posts/: a-different-way-of-working-with-streaming-json.md  a-neovim-directory-browser-from-scratch.md  discovering-nim-nimscript.md  elixir-two-weeks-in.md  http-headers-are-dark-and-full-of-terrors.md  integrating-tuis-into-neovim.md  optimizing-html-images-as-a-post-processing-step.md  reflections-on-implementing-telescope-three-times.md  reflections-on-writing-3-parser-combinator-libraries.md  rust-stockholm-syndrome.md  software-as-craft.md  time-for-computers.md  zig-first-impressions.md
src/: main.rs  page.rs  post.rs
src/page/: home.rs  (+2 more)
(+7 files in other folders)
