[package]
name = "ezeweb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
comrak = { version = "0.28.0", default-features = false }
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
jiff = { version = "0.1.13", features = ["serde"] }
matchit = "0.8.4"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toph = "0.11.0"
vintage = "0.4.0"
